# iac

./: .envrc  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .sops.yaml  .yamlfmt.yml  .yamllint  .yamllint.yml  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yaml  compose-dev.yaml  index.html  renovate.json  renovate.json5  requirements.txt  shell.nix  taskfile.yml  vars.tf
ansible/: .ansible-lint  .ansible-lint-ignore  .ansible.lint  .envrc  .justfile  .vmware.yaml  .yamllint.yaml  .yamllint.yml  README.md  ansible.cfg  dynamic.vmware.yaml  notes  pyproject.toml  requirements.txt  requirements.yaml  requirements.yml  secrets  setup.json  terraform.tfstate  yamllint.yml
ansible/collections/: requirements.yml
ansible/files/: local.ini  nginx.conf.j2
ansible/inventory/: clients.yaml  clients.yml  static.yaml  static.yml  terraform_provider.yaml  terraform_provider.yml  vsphere.vmware.yaml
ansible/playbooks/: basics.yml  configure_docker_files.yaml  configure_docker_files.yml  deploy_containers.yaml  deploy_containers.yml  deploy_horizon_stack.yml  deploy_media_stack.yml  dynamic_role_call.yaml  dynamic_role_call.yml  dynamic_task_call.yaml  dynamic_task_call.yml  get_macaddress.yml  infrastructure.yml  install_docker.yml  install_docker_containers.yml  install_nvidia_cuda_drivers.yaml  install_nvidia_cuda_drivers.yml  k3s-reset.yaml  k3s-upgrade.yaml  maintenance.yaml  maintenance.yml  mount_nfs.yaml  mount_nfs.yml  packer.yaml  packer.yml  provision-docker.yml  remove_snap.yml  set_locale.yaml  setup-box.yml  setup_code_server.yml  setup_dns.yaml  (+15 more)
(+3261 files in other folders)
