[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.32.3"
yamllint = "^1.37.0"
ansible-lint = "^26.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]
